Update to graphs

--- a/src/js/text/embed.html
+++ b/src/js/text/embed.html
@@ -8,6 +8,8 @@
 
         <div id="quiz-submit">Find out how you answers compare</div>
 
+        <div id="viz-container"></div>
+
         <iframe id="hiddenForm" name="hiddenForm" style="display:none;"></iframe>
 
     </div>
