--- a/src/js/text/main.html
+++ b/src/js/text/main.html
@@ -8,6 +8,15 @@
 
         <div id="quiz-submit">Find out how you answers compare</div>
 
+        <div id="loading-container">
+        	<div class="sk-folding-cube">
+			  <div class="sk-cube1 sk-cube"></div>
+			  <div class="sk-cube2 sk-cube"></div>
+			  <div class="sk-cube4 sk-cube"></div>
+			  <div class="sk-cube3 sk-cube"></div>
+			</div>
+        </div>
+
         <div id="viz-container"></div>
 
         <iframe id="hiddenForm" name="hiddenForm" style="display:none;"></iframe>
