Update to styles

--- a/src/js/text/main.html
+++ b/src/js/text/main.html
@@ -1,6 +1,8 @@
 <div class="interactive-container">
 
     <div class="quiz-container">
+
+    	<p>When answering for jobs other than the CEOs, we're comparing your guesses to the average total taxable income for that occupation reported by the ATO. This means the figure includes both full-time and part time people working in that job.</p>
         
         <div id="quiz-container"></div>
 
