--- a/src/js/text/embed.html
+++ b/src/js/text/embed.html
@@ -2,8 +2,7 @@
 
     <div class="quiz-container">
 
-    	<p class='quizSans'>When answering for jobs other than the CEOs, we're comparing your guesses to the average total taxable income for that occupation <a href='https://data.gov.au/dataset/taxation-statistics-2014-15'>reported by the ATO</a>. This means the figure includes both full-time and part time people in that job, as well as other income sources.</p>
-        
+    	<p class='quizSans'>When answering for jobs other than the CEOs, we're comparing your guesses to the average total taxable income for that occupation <a href='https://data.gov.au/dataset/taxation-statistics-2014-15'> in 2014-15 reported by the Australian Taxation Office (ATO)</a>. This means the figure includes both full-time and part time people in that job, as well as other income sources. The input amount is capped at $100m</p>
         <div id="quiz-container"></div>
 
         <div id="quiz-prompt"></div>
@@ -24,6 +23,7 @@
         <p class="quizSans"><b>Notes</b></p>
 
         <p class="quizSans">This quiz is based on a study published in <a href='http://www.hbs.edu/faculty/Publication%20Files/kiatpongsan%20norton%202014_f02b004a-c2de-4358-9811-ea273d372af7.pdf'>Perspectives on Psychological Science</a>. Income figures from the ATO were used despite the figures combining full-time, part-time and casual earnings as we wanted to show specific occupations which are not available in other income surveys, such as those conducted by the ABS.</p>
+        <p class="quizSans">CEO income figures are from the AFR's <a href='http://www.afr.com/business/salary-survey-2017-20170212-gub27d'>2017 salary survey</a>, which combines fixed pay and other incentives to get a figure for total remuneration.</p>
 
         <iframe id="hiddenForm" name="hiddenForm" style="display:none;"></iframe>
 
