--- a/src/js/text/main.html
+++ b/src/js/text/main.html
@@ -8,7 +8,7 @@
 
         <div id="quiz-prompt"></div>
 
-        <div id="quiz-submit">Find out how you answers compare</div>
+        <div id="quiz-submit">See how you answers compare</div>
 
         <div id="loading-container">
         	<div class="sk-folding-cube">
